完善热点题目的数据库与缓存一致性，优化删除考试记录逻辑